<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menu_stick"
        android:title="@string/menu_stick"
        android:icon="@drawable/icon_stick"
        app:showAsAction="always"/>

    <item
        android:id="@+id/menu_group"
        android:title="@string/menu_group"
        android:icon="@drawable/icon_all_group_white"
        app:showAsAction="always"/>

    <item
        android:id="@+id/menu_fontsize"
        android:title="@string/menu_fontsize"
        android:icon="@drawable/icon_font"
        app:showAsAction="always"/>

    <item
        android:id="@+id/menu_alarm"
        android:title="@string/menu_alarm"
        android:icon="@drawable/icon_alarm"
        app:showAsAction="always"/>

    <item
        android:id="@+id/menu_share"
        android:title="@string/menu_share"
        android:icon="@android:drawable/ic_menu_share"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/menu_delete"
        android:title="@string/menu_delete"
        android:icon="@drawable/icon_delete_white"
        app:showAsAction="ifRoom"/>

</menu>
